--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,110 @@ sphinx
 sphinx_rtd_theme
 pypandoc
 twine
+
+
+
+
+
+
+
+
+
+
+
+alabaster
+appdirs
+appier
+atomicwrites
+attrs
+Babel
+beautifulsoup4
+bleach
+cachetools
+certifi
+cffi
+chardet
+click
+colorama
+coverage
+cryptography
+distlib
+docutils
+execnet
+filelock
+Flask
+future
+google-api
+google-api-core
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-auth-oauthlib
+googleapis-common-protos
+httplib2
+idna
+imagesize
+importlib-metadata
+iniconfig
+itsdangerous
+Jinja2
+keyring
+line-bot-sdk
+MarkupSafe
+oauth2client
+oauthlib
+packaging
+pep8
+pkginfo
+pluggy
+protobuf
+py
+pyasn1
+pyasn1-modules
+pycparser
+PyDrive
+Pygments
+pyOpenSSL
+pypandoc
+pyparsing
+pytest
+pytest-cache
+pytest-cov
+pytest-pep8
+python-dotenv
+pytz
+pywin32-ctypes
+PyYAML
+readme-renderer
+redis
+requests
+requests-oauthlib
+requests-toolbelt
+responses
+rfc3986
+rq
+rsa
+six
+snowballstemmer
+soupsieve
+Sphinx
+sphinx-rtd-theme
+sphinxcontrib-applehelp
+sphinxcontrib-devhelp
+sphinxcontrib-htmlhelp
+sphinxcontrib-jsmath
+sphinxcontrib-qthelp
+sphinxcontrib-serializinghtml
+toml
+tox
+tqdm
+twine
+uritemplate
+urllib3
+virtualenv
+waitress
+webencodings
+WebOb
+WebTest
+Werkzeug
+zipp
